Add support for changing http status code

--- a/overlay/etc/nginx/nginx.conf.template
+++ b/overlay/etc/nginx/nginx.conf.template
@@ -18,7 +18,7 @@ http {
 
 	server {
         	listen *:80 default;
-		return 301 ${REDIRECT_TARGET};
+		return ${REDIRECT_HTTP_CODE} ${REDIRECT_TARGET};
 	}
 }
 
